--- a/app/src/main/res/layout/activity_lecturer_bio_update.xml
+++ b/app/src/main/res/layout/activity_lecturer_bio_update.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".StudentBioUpdateActivity"
     android:background="@color/colorPrimaryDark"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="RtlCompat">
 
     <RelativeLayout
         android:layout_weight="0.5"
@@ -49,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@id/closeBtn"
-            android:hint="Enter Phone No or Email"
+            android:hint="Enter Phone No Email"
             android:background="@drawable/rounded_white"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
@@ -57,7 +59,7 @@
             android:drawablePadding="10dp"
             android:focusable="true"
             android:drawableStart="@drawable/ic_search"
-            android:clickable="true"/>
+            android:clickable="true" />
 
         <Button
             android:id="@+id/btnSearch"
@@ -82,9 +84,10 @@
         android:orientation="vertical"
         android:background="@drawable/top_curves">
 
+
         <LinearLayout
             android:id="@+id/dataNotFound"
-            android:visibility="gone"
+            android:visibility="visible"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -120,9 +123,9 @@
                 android:text="Search for lecturer with a valid Phone No or Email to see results."/>
 
         </LinearLayout>
+        <include android:visibility="gone" layout="@layout/loading" android:id="@+id/loading"/>
 
-        <include  android:id="@+id/includeLecturerBio" layout="@layout/lecturer_bio_update"/>
+        <include android:visibility="gone" android:id="@+id/includeLecturerBio" layout="@layout/lecturer_bio_update"/>
 
     </RelativeLayout>
-
 </androidx.appcompat.widget.LinearLayoutCompat>
