--- a/app/src/main/res/layout/lecturer_bio_update.xml
+++ b/app/src/main/res/layout/lecturer_bio_update.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:scrollbars="vertical">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
@@ -19,7 +20,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/button_ripple">
-
             <androidx.cardview.widget.CardView
                 android:id="@+id/imgContainer"
                 android:layout_width="110dp"
@@ -37,9 +37,10 @@
                     android:layout_gravity="center">
 
                     <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/profile_image"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/lecturer"
+                        android:src="@drawable/avatar"
                         android:scaleType="centerCrop"/>
 
                 </androidx.cardview.widget.CardView>
@@ -52,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:text="Prof Alichukwu Onyema .E"
+                android:text="Prof Alichukwu Onyema E."
                 android:textStyle="bold"
                 android:textSize="25sp"
                 android:layout_marginBottom="5dp"/>
@@ -62,8 +63,8 @@
                 android:layout_below="@id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="08125364856"
-                android:textSize="20sp"
+                android:text="07064655443"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
                 android:layout_marginBottom="5dp"/>
@@ -73,7 +74,7 @@
                 android:layout_below="@id/phoneNo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Profalichukwuonyema@gmail.com"
+                android:text="alichukwu@gmail.com"
                 android:textSize="18sp"
                 android:textAlignment="center"
                 android:layout_marginBottom="10dp"/>
@@ -85,10 +86,34 @@
                 android:layout_below="@id/email"
                 android:inputType="textMultiLine"
                 android:hint="Why do you want to update fingerprint?"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
-                android:layout_marginBottom="25dp"
+                android:layout_marginBottom="5dp"
+                android:imeOptions="actionNext"/>
+
+            <EditText
+                android:id="@+id/prevFingerIndex"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/reason"
+                android:inputType="number"
+                android:hint="Index Number of the previous finger?"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="10dp"
+                android:imeOptions="actionNext"/>
+
+            <EditText
+                android:id="@+id/newFingerIndex"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/prevFingerIndex"
+                android:inputType="number"
+                android:hint="Index Number of the new finger?"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginBottom="10dp"
                 android:imeOptions="actionNext"/>
 
             <Button
@@ -97,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:text="Update Fingerprint"
-                android:layout_below="@id/reason"
+                android:layout_below="@id/newFingerIndex"
                 android:textAlignment="center"
                 android:layout_centerHorizontal="true"
                 android:textColor="@color/whiteColor"
@@ -105,11 +130,9 @@
                 android:drawablePadding="10dp"
                 android:paddingLeft="60dp"
                 android:paddingRight="60dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="40dp"
                 android:layout_gravity="center"/>
-
         </RelativeLayout>
-
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+</ScrollView>
