--- a/app/src/main/res/layout/activity_lecturer_bio_update.xml
+++ b/app/src/main/res/layout/activity_lecturer_bio_update.xml
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@id/closeBtn"
-            android:hint="Enter Phone No Email"
+            android:hint="Enter Phone number or Email"
             android:background="@drawable/rounded_white"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
