--- a/app/src/main/res/layout/student_bio_update.xml
+++ b/app/src/main/res/layout/student_bio_update.xml
@@ -40,7 +40,7 @@
                         android:id="@+id/profile_image"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/profile_img"
+                        android:src="@drawable/avatar"
                         android:scaleType="centerCrop"/>
 
                 </androidx.cardview.widget.CardView>
